SYNC-1638 lang keys

--- a/sync-web/src/main/resources/content/Language_ar.properties
+++ b/sync-web/src/main/resources/content/Language_ar.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=شوهد لآخر مرة (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=معدل التحميل ماكس (Automatic Translation)
+max-download-rate-help=تعيين معدل نقل الحد الأقصى بالبايت التي يمكن تحميل العملاء. تشير قيمة 0 إلى أنه ليس هناك حد. (Automatic Translation)
+max-upload-rate=معدل تحميل ماكس (Automatic Translation)
+max-upload-rate-help=تعيين معدل نقل الحد الأقصى بالبايت التي يمكن للعملاء تحميل. تشير قيمة 0 إلى أنه ليس هناك حد. (Automatic Translation)
 no-devices-were-found=تم العثور على أية أجهزة. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
