--- a/sync-web/src/main/resources/content/Language_bg.properties
+++ b/sync-web/src/main/resources/content/Language_bg.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Последно видян (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Макс скорост на изтегляне (Automatic Translation)
+max-download-rate-help=Задаване скорост на максимален трансфер в байтове, в които клиентите да изтеглите. Стойност 0 показва, че няма ограничение. (Automatic Translation)
+max-upload-rate=Макс скорост на качване (Automatic Translation)
+max-upload-rate-help=Задаване скорост на максимален трансфер в байтове, в които клиентите могат да качват. Стойност 0 показва, че няма ограничение. (Automatic Translation)
 no-devices-were-found=Не са намерени устройства. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
