--- a/sync-web/src/main/resources/content/Language_ca.properties
+++ b/sync-web/src/main/resources/content/Language_ca.properties
@@ -16,6 +16,10 @@ full-access-x=Accés total ({0})
 last-seen=Vist per última vegada (Automatic Translation)
 max-connections=Nombre màxim de connexions
 max-connections-help=Estableix el nombre màxim de connexions simultànies que es permeten per cada client i compte.
+max-download-rate=Max descarregar proporció (Automatic Translation)
+max-download-rate-help=Troba la taxa de transferència màxima, bytes, que pot descarregar als clients. Un valor de 0 indica que no hi ha límit. (Automatic Translation)
+max-upload-rate=Max carregar proporció (Automatic Translation)
+max-upload-rate-help=Troba la taxa de transferència màxima, bytes, que pot pujar als clients. Un valor de 0 indica que no hi ha límit. (Automatic Translation)
 no-devices-were-found=No hi ha mecanismes s'han trobat. (Automatic Translation)
 oauth-enabled=OAuth habilitat
 oauth-enabled-help=Si es marca, els clients utilitzaran OAuth i els filtres SSO d'autologin configurats per a la autentificació.
