--- a/sync-web/src/main/resources/content/Language_cs.properties
+++ b/sync-web/src/main/resources/content/Language_cs.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Naposledy viděn (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Maximální rychlost stahování (Automatic Translation)
+max-download-rate-help=Nastavte maximální přenosovou rychlost v bajtech, kde klienti mohou stahovat. Hodnota 0 označuje, že neexistuje žádné omezení. (Automatic Translation)
+max-upload-rate=Max rychlost odesílání (Automatic Translation)
+max-upload-rate-help=Nastavte maximální přenosovou rychlost v bajtech, na kterých mohou klienti ukládat. Hodnota 0 označuje, že neexistuje žádné omezení. (Automatic Translation)
 no-devices-were-found=Nebylo nalezeno žádné zařízení. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
