--- a/sync-web/src/main/resources/content/Language_es.properties
+++ b/sync-web/src/main/resources/content/Language_es.properties
@@ -16,6 +16,10 @@ full-access-x=Acceso completo ({0})
 last-seen=Visto por última vez (Automatic Translation)
 max-connections=Número máximo de conexiones
 max-connections-help=Establece el número máximo de conexiones simultáneas que se permiten por cada cliente y cuenta.
+max-download-rate=Max velocidad de descarga (Automatic Translation)
+max-download-rate-help=Ajustar la velocidad de transferencia máxima, en bytes, en el cual pueden descargar clientes. Un valor de 0 indica que no hay límite. (Automatic Translation)
+max-upload-rate=Tasa de carga máxima (Automatic Translation)
+max-upload-rate-help=Establecer la tasa de transferencia máxima, en bytes, que pueden subir clientes. Un valor de 0 indica que no hay límite. (Automatic Translation)
 no-devices-were-found=No se encontró ningún dispositivo. (Automatic Translation)
 oauth-enabled=OAuth Habilitado
 oauth-enabled-help=Si se marca, los clientes usarán OAuth y los filtros SSO de autologin configurados para la autenticación.
