--- a/sync-web/src/main/resources/content/Language_et.properties
+++ b/sync-web/src/main/resources/content/Language_et.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Viimati nähtud Just praegu (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Max allalaadimise kiirus (Automatic Translation)
+max-download-rate-help=Määra maksimaalne edastuskiirus baitides, kus kliendid saate alla laadida. Väärtus 0 näitab, et ei ole piiratud. (Automatic Translation)
+max-upload-rate=Max Upload kiirus (Automatic Translation)
+max-upload-rate-help=Määra maksimaalne edastuskiirus baitides, kus kliendid üles laadida. Väärtus 0 näitab, et ei ole piiratud. (Automatic Translation)
 no-devices-were-found=Ühtegi seadet ei leitud. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
