--- a/sync-web/src/main/resources/content/Language_fr.properties
+++ b/sync-web/src/main/resources/content/Language_fr.properties
@@ -16,6 +16,10 @@ full-access-x=Accès intégrale ({0})
 last-seen=Dernière visite (Automatic Translation)
 max-connections=Nombre de connexions maximum
 max-connections-help=Définir le nombre maximum de connexion simultanées que chaque client est autorisé par compte.
+max-download-rate=Débit Max (Automatic Translation)
+max-download-rate-help=Définir la vitesse de transfert maximale, en octets, à laquelle les clients peuvent télécharger. Une valeur de 0 indique qu’il n’y a aucune limite. (Automatic Translation)
+max-upload-rate=Taux d’Upload Max (Automatic Translation)
+max-upload-rate-help=Définir la vitesse de transfert maximale, en octets, à laquelle les clients peuvent télécharger. Une valeur de 0 indique qu’il n’y a aucune limite. (Automatic Translation)
 no-devices-were-found=Aucun périphérique ont été trouvés. (Automatic Translation)
 oauth-enabled=OAuth activé
 oauth-enabled-help=Si vous cochez cette option, les clients vont utiliser OAuth et les filtres d'autologin SSO configurés for authentification.
