--- a/sync-web/src/main/resources/content/Language_hu.properties
+++ b/sync-web/src/main/resources/content/Language_hu.properties
@@ -16,6 +16,10 @@ full-access-x=Teljes jog ({0})
 last-seen=Utoljára látható (Automatic Translation)
 max-connections=Összes kapcsolat
 max-connections-help=Állítsd be a maximális értékét a párhuzamos kapcsolatoknak, ami elérhető lesz az összes ügyfélnek fiókonként.
+max-download-rate=Max letöltési sebesség (Automatic Translation)
+max-download-rate-help=Készlet a legfelső határ átvitel arány, bájt, amely ügyfelek tud letölt. A 0 érték azt jelzi, hogy nincs korlátozás. (Automatic Translation)
+max-upload-rate=Max feltöltési sebesség (Automatic Translation)
+max-upload-rate-help=Készlet a legfelső határ átvitel arány, bájt, amely ügyfelek tud feltölt. A 0 érték azt jelzi, hogy nincs korlátozás. (Automatic Translation)
 no-devices-were-found=Nem található eszköz. (Automatic Translation)
 oauth-enabled=OAuth engedélyezve
 oauth-enabled-help=Ha ez be van pipálva, az ügyfelek használni fogják az OAuth és a beállított SSO automatikus belépési szűrőket a hitelesítéshez.
