--- a/sync-web/src/main/resources/content/Language_in.properties
+++ b/sync-web/src/main/resources/content/Language_in.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Terakhir terlihat (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Kecepatan Download maks (Automatic Translation)
+max-download-rate-help=Mengatur kecepatan maksimum transfer, dalam bytes, di mana klien dapat men-download. Nilai 0 menunjukkan bahwa tidak ada batasan. (Automatic Translation)
+max-upload-rate=Max Upload tingkat (Automatic Translation)
+max-upload-rate-help=Mengatur kecepatan maksimum transfer, dalam bytes, di mana klien dapat meng-upload. Nilai 0 menunjukkan bahwa tidak ada batasan. (Automatic Translation)
 no-devices-were-found=Perangkat tidak ditemukan. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
