--- a/sync-web/src/main/resources/content/Language_it.properties
+++ b/sync-web/src/main/resources/content/Language_it.properties
@@ -16,6 +16,10 @@ full-access-x=Accesso Completo ({0})
 last-seen=Ultimo ingresso (Automatic Translation)
 max-connections=Numero massimo di connessioni
 max-connections-help=Imposta il numero massimo di connessioni simultanee consentito che ogni client può aprire per account.
+max-download-rate=Max velocità di Download (Automatic Translation)
+max-download-rate-help=Impostare la velocità di trasferimento massima, in byte, in cui i clienti possono scaricare. Un valore pari a 0 indica che non c'è limite. (Automatic Translation)
+max-upload-rate=Max velocità di Upload (Automatic Translation)
+max-upload-rate-help=Impostare la velocità di trasferimento massima, in byte, in cui i clienti possono caricare. Un valore pari a 0 indica che non c'è limite. (Automatic Translation)
 no-devices-were-found=Nessun dispositivo rilevato. (Automatic Translation)
 oauth-enabled=Abilita OAuth
 oauth-enabled-help=Se flaggato, i client utilizzeranno OAuht e i filtri di SSO configurati per l'autenticazione.
