--- a/sync-web/src/main/resources/content/Language_iw.properties
+++ b/sync-web/src/main/resources/content/Language_iw.properties
@@ -16,6 +16,10 @@ full-access-x=גישה מלאה ({0})
 last-seen=נראתה לאחרונה (Automatic Translation)
 max-connections=מספר חיבורים מקסימלי
 max-connections-help=הגדירו את מספר החיבורים המקסימלי המותרים לכל קליינט בו זמנית עבור כל חשבון.
+max-download-rate=קצב ההורדה מקס (Automatic Translation)
+max-download-rate-help=הגדר את קצב ההעברה המירבי, בבתים, שבה לקוחות ניתן להוריד. הערך 0 מציין כי אין גבול. (Automatic Translation)
+max-upload-rate=קצב ההעלאה מקס (Automatic Translation)
+max-upload-rate-help=הגדר את קצב ההעברה המירבי, בבתים, שבה לקוחות יכולים להעלות. הערך 0 מציין כי אין גבול. (Automatic Translation)
 no-devices-were-found=התקנים לא נמצאו. (Automatic Translation)
 oauth-enabled=OAuth מופעל
 oauth-enabled-help=אם אפשרות זו מסומנת, קליינטים ישתמשו בOAuth ומסנני SSO של כניסה אוטומטית לאימות.
