--- a/sync-web/src/main/resources/content/Language_lt.properties
+++ b/sync-web/src/main/resources/content/Language_lt.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Paskutinį kartą matytas (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Max Parsisiųsti kurso (Automatic Translation)
+max-download-rate-help=Nustatytas maksimalus perdavimo sparta bitais, kuriuo Klientai gali atsisiųsti. Reikšmė 0 rodo, kad nėra jokių apribojimų. (Automatic Translation)
+max-upload-rate=Max Upload greitis (Automatic Translation)
+max-upload-rate-help=Nustatytas maksimalus perdavimo sparta, baitais, kurioje galite nusiųsti klientams. Reikšmė 0 rodo, kad nėra jokių apribojimų. (Automatic Translation)
 no-devices-were-found=Jokių įrenginių nerasta. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
