--- a/sync-web/src/main/resources/content/Language_pl.properties
+++ b/sync-web/src/main/resources/content/Language_pl.properties
@@ -16,6 +16,10 @@ full-access-x=Pełen Dostęp ({0})
 last-seen=Ostatnio widziani (Automatic Translation)
 max-connections=Maksymalna ilość połączeń
 max-connections-help=Ustaw maksymalną liczbę jednoczesnych połączeń, którą można nawiązać z pojedynczego konta.
+max-download-rate=Max szybkość pobierania (Automatic Translation)
+max-download-rate-help=Ustawić maksymalną szybkość transmisji, w bajtach, w których można pobrać klientów. Wartość 0 wskazuje, że nie ma żadnego limitu. (Automatic Translation)
+max-upload-rate=Max Upload Rate (Automatic Translation)
+max-upload-rate-help=Ustawić maksymalną szybkość transmisji, w bajtach, w których klienci mogą przesyłać. Wartość 0 wskazuje, że nie ma żadnego limitu. (Automatic Translation)
 no-devices-were-found=Żadne urządzenia nie zostały znalezione. (Automatic Translation)
 oauth-enabled=Aktywuj OAuth
 oauth-enabled-help=Jeśli zaznaczone, uwierzytelnienie i autoryzacja klientów odbywać się będą za pomocą OAuth wraz ze skonfigurowanymi filtrami autologowania SSO.
