--- a/sync-web/src/main/resources/content/Language_ro.properties
+++ b/sync-web/src/main/resources/content/Language_ro.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Vazut ultima oara (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Rata de Download Max (Automatic Translation)
+max-download-rate-help=Setaţi rata de transfer maximă, în bytes, la care puteţi descărca clientii. Valoarea 0 precizează că nu există nici o limită. (Automatic Translation)
+max-upload-rate=Rata de Upload Max (Automatic Translation)
+max-upload-rate-help=Setaţi rata de transfer maximă, în bytes, la care clientii pot încărca. Valoarea 0 precizează că nu există nici o limită. (Automatic Translation)
 no-devices-were-found=S-au găsit nici un dispozitiv. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
