--- a/sync-web/src/main/resources/content/Language_ru.properties
+++ b/sync-web/src/main/resources/content/Language_ru.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=В прошлый раз (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Макс скорость загрузки (Automatic Translation)
+max-download-rate-help=Задайте максимальную скорость передачи, в байтах, на которых можно скачать клиенты. Значение 0 указывает, что нет предела. (Automatic Translation)
+max-upload-rate=Максимальная скорость загрузки (Automatic Translation)
+max-upload-rate-help=Задайте максимальную скорость передачи, в байтах, на которых клиенты могут загрузить. Значение 0 указывает, что нет предела. (Automatic Translation)
 no-devices-were-found=Устройства не были найдены. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
