--- a/sync-web/src/main/resources/content/Language_sl.properties
+++ b/sync-web/src/main/resources/content/Language_sl.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Nazadnje videli (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Max hitrost prenosov (Automatic Translation)
+max-download-rate-help=Nastavite največjo presavitev obrok, v bajtih, kjer lahko prenesete strank. Vrednost 0 označuje, da ni omejitve. (Automatic Translation)
+max-upload-rate=Max Upload hitrost (Automatic Translation)
+max-upload-rate-help=Nastavite največjo presavitev obrok, v bajtih, kjer lahko naložite strank. Vrednost 0 označuje, da ni omejitve. (Automatic Translation)
 no-devices-were-found=Naprav ni bilo mogoče najti. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
