--- a/sync-web/src/main/resources/content/Language_tr.properties
+++ b/sync-web/src/main/resources/content/Language_tr.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Son görüldüğü (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Max indirme hızı (Automatic Translation)
+max-download-rate-help=En yüksek aktarım hızı, hangi-ebilmek download istemcileri bayt olarak ayarlayın. 0 değeri sınırı olduğunu gösterir. (Automatic Translation)
+max-upload-rate=Max Upload hızı (Automatic Translation)
+max-upload-rate-help=En yüksek aktarım hızı, hangi-ebilmek upload istemcileri bayt olarak ayarlayın. 0 değeri sınırı olduğunu gösterir. (Automatic Translation)
 no-devices-were-found=Hiçbir aygıt bulunamadı. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
