--- a/sync-web/src/main/resources/content/Language_uk.properties
+++ b/sync-web/src/main/resources/content/Language_uk.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Останній раз бачив (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Ставка Макс завантаження (Automatic Translation)
+max-download-rate-help=Встановити швидкість Максимальна передачі (у байтах), в яких клієнти можуть завантажити. Значення 0 вказує на те, що немає межі. (Automatic Translation)
+max-upload-rate=Ставка Макс завантаження (Automatic Translation)
+max-upload-rate-help=Встановити швидкість Максимальна передачі (у байтах), з якою можна передавати клієнтам. Значення 0 вказує на те, що немає межі. (Automatic Translation)
 no-devices-were-found=Не знайдено пристроїв. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
