--- a/sync-web/src/main/resources/content/Language_vi.properties
+++ b/sync-web/src/main/resources/content/Language_vi.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Last Seen (Automatic Translation)
 max-connections=Max Connections (Automatic Copy)
 max-connections-help=Set the maximum number of simultaneous connections each client is allowed per account. (Automatic Copy)
+max-download-rate=Tốc độ tải về tối đa (Automatic Translation)
+max-download-rate-help=Thiết lập tốc độ truyền tối đa, tại byte, mà khách hàng có thể tải về. Giá trị là 0 chỉ ra rằng không là không có giới hạn. (Automatic Translation)
+max-upload-rate=Max Upload tỷ lệ (Automatic Translation)
+max-upload-rate-help=Thiết lập tốc độ truyền tối đa, tại byte, mà khách hàng có thể tải lên. Giá trị là 0 chỉ ra rằng không là không có giới hạn. (Automatic Translation)
 no-devices-were-found=Không được tìm thấy thiết. (Automatic Translation)
 oauth-enabled=OAuth Enabled (Automatic Copy)
 oauth-enabled-help=If checked, clients will use OAuth and configured SSO autologin filters for authentication. (Automatic Copy)
