--- a/sync-web/src/main/resources/content/Language_zh_CN.properties
+++ b/sync-web/src/main/resources/content/Language_zh_CN.properties
@@ -16,6 +16,10 @@ full-access-x=完全访问权限({0})
 last-seen=最后看到 (Automatic Translation)
 max-connections=最大的连接数
 max-connections-help=设置各个账户所允许的每个客户最大并发连接数
+max-download-rate=最大下载速度 (Automatic Translation)
+max-download-rate-help=设置最大传输速率，以字节为单位，在该客户端可以下载。值为 0 表示是没有限制。 (Automatic Translation)
+max-upload-rate=最大上传速率 (Automatic Translation)
+max-upload-rate-help=设置最大传输速率，以字节为单位，在该客户端可以上传。值为 0 表示是没有限制。 (Automatic Translation)
 no-devices-were-found=找不到设备。 (Automatic Translation)
 oauth-enabled=启用OAuth
 oauth-enabled-help=如果勾选此项,客户将使用OAuth和配置SSO自动登录过滤器进行身份验证。
