--- a/sync-web/src/main/resources/content/Language_zh_TW.properties
+++ b/sync-web/src/main/resources/content/Language_zh_TW.properties
@@ -16,6 +16,10 @@ full-access-x=完全存取 ({0})
 last-seen=最後看到 (Automatic Translation)
 max-connections=最大連線
 max-connections-help=設定每個客戶端同時連線最大數目，被允許於每個帳戶。
+max-download-rate=最大下載速度 (Automatic Translation)
+max-download-rate-help=設置最大傳輸速率，以位元組為單位，在該用戶端可以下載。值為 0 表示是沒有限制。 (Automatic Translation)
+max-upload-rate=最大上傳速率 (Automatic Translation)
+max-upload-rate-help=設置最大傳輸速率，以位元組為單位，在該用戶端可以上傳。值為 0 表示是沒有限制。 (Automatic Translation)
 no-devices-were-found=找不到設備。 (Automatic Translation)
 oauth-enabled=OAuth已啟用
 oauth-enabled-help=如果核選，客戶端將會在驗證上使用OAuth與已設定的SSO自動登入過濾。
