--- a/sync-web/src/main/resources/content/Language_de.properties
+++ b/sync-web/src/main/resources/content/Language_de.properties
@@ -16,6 +16,10 @@ full-access-x=Vollständiger Zugriff ({0})
 last-seen=Last Seen (Automatic Copy)
 max-connections=Maximale Anzahl von Verbindungen
 max-connections-help=Legen Sie die maximal erlaubte Anzahl von Verbindungen pro Client und Account fest.
+max-download-rate=Max Download Rate (Automatic Copy)
+max-download-rate-help=Set the maximum transfer rate, in bytes, at which clients can download. A value of 0 indicates that there is no limit. (Automatic Copy)
+max-upload-rate=Max Upload Rate (Automatic Copy)
+max-upload-rate-help=Set the maximum transfer rate, in bytes, at which clients can upload. A value of 0 indicates that there is no limit. (Automatic Copy)
 no-devices-were-found=No devices were found. (Automatic Copy)
 oauth-enabled=OAuth aktiviert
 oauth-enabled-help=Ist diese Einstellung aktiviert, verwenden Clients OAuth und die konfigurierten SSO-Autologinfilter für die Authentisierung.
