--- a/sync-web/src/main/resources/content/Language_fa.properties
+++ b/sync-web/src/main/resources/content/Language_fa.properties
@@ -16,6 +16,10 @@ full-access-x=دسترسی کامل ({0})
 last-seen=آخرین مشاهده (Automatic Translation)
 max-connections=حداکثر اتصالات
 max-connections-help=حداکثر عدد اتصال همزمان هر مشتری که در هر حساب مجاز است را تنظیم کنید.
+max-download-rate=حداکثر سرعت دانلود (Automatic Translation)
+max-download-rate-help=نرخ انتقال حداکثر در بایت، که در آن مشتریان می توانید دانلود کنید مقدار 0 نشان می دهد که هیچ محدودیتی وجود ندارد. (Automatic Translation)
+max-upload-rate=حداکثر سرعت آپلود (Automatic Translation)
+max-upload-rate-help=تنظیم سرعت انتقال حداکثر در بایت، که در آن مشتریان می توانند ارسال. مقدار 0 نشان می دهد که هیچ محدودیتی وجود ندارد. (Automatic Translation)
 no-devices-were-found=هیچ دستگاهی پیدا نشد. (Automatic Translation)
 oauth-enabled=OAuth فعال شد.
 oauth-enabled-help=اگر علامت زده شود، مشتریان با استفاده از OAuth و پیکربندی فیلتر خودکار SSO برای احراز هویت استفاده می‌کنند.
