--- a/sync-web/src/main/resources/content/Language_fi.properties
+++ b/sync-web/src/main/resources/content/Language_fi.properties
@@ -16,6 +16,10 @@ full-access-x=Täydet käyttöoikeudet ({0})
 last-seen=Last Seen (Automatic Copy)
 max-connections=Maksimimäärä yhteyksiä
 max-connections-help=Aseta maksimi määrä yhtäaikaisia yhteyksiä, mitä kukin asiakas ohjelma saa tehdä tiliä kohden.
+max-download-rate=Max Download Rate (Automatic Copy)
+max-download-rate-help=Set the maximum transfer rate, in bytes, at which clients can download. A value of 0 indicates that there is no limit. (Automatic Copy)
+max-upload-rate=Max Upload Rate (Automatic Copy)
+max-upload-rate-help=Set the maximum transfer rate, in bytes, at which clients can upload. A value of 0 indicates that there is no limit. (Automatic Copy)
 no-devices-were-found=No devices were found. (Automatic Copy)
 oauth-enabled=OAuth otettu käyttöön
 oauth-enabled-help=Jos asetettu, asiakasohjelmat käyttävät OAuth ja määriteltyjä SSO automaattisen sisäänkirjautumisen suodattimia autentikaatioon.
