--- a/sync-web/src/main/resources/content/Language_ja.properties
+++ b/sync-web/src/main/resources/content/Language_ja.properties
@@ -16,6 +16,10 @@ full-access-x=フルアクセス ({0})
 last-seen=Last Seen (Automatic Copy)
 max-connections=最大接続数
 max-connections-help=アカウントごとに、各クライアントの最大同時接続数を設定
+max-download-rate=Max Download Rate (Automatic Copy)
+max-download-rate-help=Set the maximum transfer rate, in bytes, at which clients can download. A value of 0 indicates that there is no limit. (Automatic Copy)
+max-upload-rate=Max Upload Rate (Automatic Copy)
+max-upload-rate-help=Set the maximum transfer rate, in bytes, at which clients can upload. A value of 0 indicates that there is no limit. (Automatic Copy)
 no-devices-were-found=No devices were found. (Automatic Copy)
 oauth-enabled=OAuthの使用を許可
 oauth-enabled-help=チェックされている場合、クライアントはOAuthと、設定されたSSO自動ログインフィルターを認証に使用します。
