--- a/sync-web/src/main/resources/content/Language_nb.properties
+++ b/sync-web/src/main/resources/content/Language_nb.properties
@@ -16,6 +16,10 @@ full-access-x=Full tilgang ({0})
 last-seen=Sist sett (Automatic Translation)
 max-connections=Maks antall tilkoblinger
 max-connections-help=Angi maks antall samtidige tilkoblinger hver klient tillates pr konto.
+max-download-rate=Max nedlasting hastighet (Automatic Translation)
+max-download-rate-help=Angi den maksimale overføringshastigheten, i byte, som kunder kan laste ned. Verdien 0 angir at det er ingen grense. (Automatic Translation)
+max-upload-rate=Max sende Rate (Automatic Translation)
+max-upload-rate-help=Angi den maksimale overføringshastigheten, i byte, som kunder kan laste opp. Verdien 0 angir at det er ingen grense. (Automatic Translation)
 no-devices-were-found=Ingen enheter ble funnet. (Automatic Translation)
 oauth-enabled=OAuth aktivert
 oauth-enabled-help=Dersom valgt vil klienter bruke OAuth og konfigurert SSO autoinnloggingsfilter for autentisering.
