--- a/sync-web/src/main/resources/content/Language_nl.properties
+++ b/sync-web/src/main/resources/content/Language_nl.properties
@@ -16,6 +16,10 @@ full-access-x=Volledige Toegang ({0})
 last-seen=Last Seen (Automatic Copy)
 max-connections=Max Verbindingen
 max-connections-help=Stel het aantal toegestane maximale gelijktijdige verbindingen van iedere client per account.
+max-download-rate=Max Download Rate (Automatic Copy)
+max-download-rate-help=Set the maximum transfer rate, in bytes, at which clients can download. A value of 0 indicates that there is no limit. (Automatic Copy)
+max-upload-rate=Max Upload Rate (Automatic Copy)
+max-upload-rate-help=Set the maximum transfer rate, in bytes, at which clients can upload. A value of 0 indicates that there is no limit. (Automatic Copy)
 no-devices-were-found=No devices were found. (Automatic Copy)
 oauth-enabled=OAuth Ingeschakeld
 oauth-enabled-help=Indien aangevinkt, kunnen cliënten OAuth en SSO autologen filters voor authenticatie gebruiken.
