--- a/sync-web/src/main/resources/content/Language_nl_BE.properties
+++ b/sync-web/src/main/resources/content/Language_nl_BE.properties
@@ -16,6 +16,10 @@ full-access-x=Full Access ({0}) (Automatic Copy)
 last-seen=Last Seen (Automatic Copy)
 max-connections=Max verbindingen (Automatic Translation)
 max-connections-help=Het maximum aantal verbindingen per client instellen. (Automatic Translation)
+max-download-rate=Max Download Rate (Automatic Copy)
+max-download-rate-help=Set the maximum transfer rate, in bytes, at which clients can download. A value of 0 indicates that there is no limit. (Automatic Copy)
+max-upload-rate=Max Upload Rate (Automatic Copy)
+max-upload-rate-help=Set the maximum transfer rate, in bytes, at which clients can upload. A value of 0 indicates that there is no limit. (Automatic Copy)
 no-devices-were-found=No devices were found. (Automatic Copy)
 oauth-enabled=OAuth ingeschakeld (Automatic Translation)
 oauth-enabled-help=Indien aangevinkt, klanten zal gebruik OAuth en geconfigureerd SSO autologin filters voor verificatie. (Automatic Translation)
