--- a/sync-web/src/main/resources/content/Language_pt_PT.properties
+++ b/sync-web/src/main/resources/content/Language_pt_PT.properties
@@ -16,6 +16,10 @@ full-access-x=Acesso Total ({0})
 last-seen=Visto pela última vez (Automatic Translation)
 max-connections=Número máximo de conexões
 max-connections-help=Define o número máximo de conexões simultâneas permitidas para cada cliente, por conta.
+max-download-rate=Taxa de Download Max (Automatic Translation)
+max-download-rate-help=Defina a taxa de transferência máxima, em bytes, na qual os clientes podem baixar. Um valor de 0 indica que não há nenhum limite. (Automatic Translation)
+max-upload-rate=Taxa de Upload Max (Automatic Translation)
+max-upload-rate-help=Defina a taxa de transferência máxima, em bytes, na qual os clientes podem fazer upload. Um valor de 0 indica que não há nenhum limite. (Automatic Translation)
 no-devices-were-found=Dispositivos não foram encontrados. (Automatic Translation)
 oauth-enabled=OAuth Ativo
 oauth-enabled-help=Se selecionado, os clientes utilizarão OAuth e filtros SSO de autologin configurados para autenticação.
