--- a/sync-web/src/main/resources/content/Language_sk.properties
+++ b/sync-web/src/main/resources/content/Language_sk.properties
@@ -16,6 +16,10 @@ full-access-x=Plný prístup ({0})
 last-seen=Naposledy videný (Automatic Translation)
 max-connections=Maximum spojení
 max-connections-help=Zadajte maximálny počet súčasných spojení, ktoré má každý klient povolené pre jeden účet.
+max-download-rate=Max rýchlosť sťahovania (Automatic Translation)
+max-download-rate-help=Nastavte maximálnu prenosovú rýchlosť, v bytoch, v ktorom môžete stiahnuť klientov. Hodnota 0 označuje, že nie je žiadne obmedzenie. (Automatic Translation)
+max-upload-rate=Max Upload rýchlosť (Automatic Translation)
+max-upload-rate-help=Nastavte maximálnu prenosovú rýchlosť, v bytoch, kde môžete odovzdať klientom. Hodnota 0 označuje, že nie je žiadne obmedzenie. (Automatic Translation)
 no-devices-were-found=Nenašli sa žiadne zariadenia. (Automatic Translation)
 oauth-enabled=OAuth povolené
 oauth-enabled-help=Ak je zaškrtnuté, klient použije OAuth a nakonfigurované prihlasovacie SSO filtre pre prihlásenie.
