LPS-77025 Add portlet name translations for supported languages that lack them

--- a/sync-web/src/main/resources/content/Language_ja.properties
+++ b/sync-web/src/main/resources/content/Language_ja.properties
@@ -18,7 +18,7 @@ full-access=フルアクセス
 full-access-help=サイトメンバーはLiferay Syncを通してアップロードされたファイルの閲覧、更新、削除またはコメントの書き込みができます
 full-access-x=フルアクセス ({0})
 javax.portlet.title.com_liferay_sync_web_portlet_SyncAdminPortlet=Sync Connector管理
-javax.portlet.title.com_liferay_sync_web_portlet_SyncDevicesPortlet=My Sync Devices (Automatic Copy)
+javax.portlet.title.com_liferay_sync_web_portlet_SyncDevicesPortlet=自分のSyncデバイス
 last-seen=Last Seen (Automatic Copy)
 max-connections=最大接続数
 max-connections-help=アカウントごとに、各クライアントの最大同時接続数を設定
